# interview-diary-cli

./: README.md  pyproject.toml  run
src/: chat.py  main.py  slack_message.py  templates.py  voicevox.py
src/prompts/: chat.prompt  diary.prompt
